@@ -1,3 +1,8 @@
+2011-06-16  Jason Merrill  <jason@redhat.com>
+
+	PR c++/49251
+	* g++.dg/cpp0x/variadic113.C: New.
+
 2011-06-16  Kaz Kojima  <kkojima@gcc.gnu.org>
 
 	Backport form main line
