@@ -1,3 +1,9 @@
+2011-06-16  Jason Merrill  <jason@redhat.com>
+
+	PR c++/49251
+	* semantics.c (finish_id_expression): Mark even dependent
+	variables as used.
+
 2011-06-14  Jason Merrill  <jason@redhat.com>
 
 	* error.c (type_to_string): Print typedef-stripped version too.
